# freight-hub

./: .gitignore  CLAUDE.md  README.md  nginx-freight-hub.conf  nginx-freight.conf
backend/: freight-analytics.service  freight-analytics.timer  freight-api.service  freight-registry.service  freight-registry.timer  ingest_aer_pipeline_routes.py  ingest_cer_pipeline_routes.py  ingest_eia_hgl_routes.py  ingest_eia_ng_intrastate_routes.py  ingest_eia_oil_routes.py  ingest_eia_routes.py  ingest_eu_pipeline_routes.py  ingest_extend_crosswalk.py  ingest_global_pipeline_routes.py  ingest_global_pipeline_routes_pass2.py  ingest_osm_named_pipeline_routes.py  ingest_wm_straightline_routes.py  precompute_freight.py  pyproject.toml  scrape_rextag.py
backend/analytics/: build.py  detect.py  eta_backtest.py  eta_drift.py  eta_labels.py  eta_physics.py  eta_routing.py  eta_samples.py  eta_serving.py  zones.py
backend/analytics/baselines/: eta_naive+route_baseline.csv  eta_naive_baseline.csv  eta_physics_v1_baseline.csv
backend/app/: db.py  equasis.py  feed.py  fleet.py  main.py  project_paths.py  runner_dispersion.py  runner_eta.py  runner_routes.py  schemas.py
backend/app/freight_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/static/: dispersion_default.json  routes_default.json
backend/registry/: crawl.py  ofac.py  risk.py
backend/tests/: conftest.py  test_arrivals.py  test_canonical_port.py  test_detect.py  test_endpoints.py  test_eta.py  test_eta_drift.py  test_eta_serving.py  test_flags.py  test_fleet.py  test_registry.py  test_risk.py
(+67 files in other folders)
