[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freight-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.3",
    "fastapi>=0.115",
    "pydantic>=2.11",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.34",
    "market-data",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[tool.uv.sources]
market-data = { path = "../../shared/market-data", editable = true }

[tool.setuptools.packages.find]
where = ["app"]
